Remove compiler call that accessed internals